appId: com.anonymous.reactnativekorbis
---
- runFlow:
    file: ./setup.yaml
- scrollUntilVisible:
    element:
      id: "__item-card__"
- tapOn:
    id: "__item-card__"
- assertVisible:
    id: "__asset-view-image__"
- assertVisible:
    id: "__read-asset-quantity__"
- assertVisible:
    id: "__asset-name__"
- assertVisible:
    id: "__asset-tags__"
- assertVisible:
    id: "__asset-description__"
- scrollUntilVisible:
    element:
      id: "__add-asset-attachments__"
- scrollUntilVisible:
    element:
      id: "__asset-location__"
- scrollUntilVisible:
    element:
      id: "__asset-delete-button__"
- back
- assertVisible:
    id: "__item-list__"